--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "orchestr",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,17 +11,23 @@
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
+    "lucide-react": "^0.379.0",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "3.4.3",
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "encoding": "^0.1.13"
+    "clsx": "^2.1.1",
+    "encoding": "^0.1.13",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
