--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "orchestr",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,7 @@
   "dependencies": {
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "lucide-react": "^0.379.0",
@@ -18,7 +20,8 @@
     "react-dom": "18.2.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "3.4.3",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
