--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+
+    "tailwind.config.ts",
     ".next/types/**/*.ts",
     "**/*.cjs",
     "**/*.mjs",
