--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true,
     "noErrorTruncation": true,
@@ -35,8 +37,6 @@
     "**/*.ts",
     "**/*.config.ts",
     "**/*.tsx",
-    "next.config.js",
-    "drizzle.config.ts",
     ".next/types/**/*.ts",
     "./tailwind.config.ts",
     "app.types.ts"
