--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.7.0",
     "@icholy/duration": "^5.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@supabase-cache-helpers/postgrest-react-query": "^1.7.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.2",
@@ -35,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-textarea-autosize": "^8.5.3",
     "scheduler": "^0.23.2",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
@@ -51,34 +53,35 @@
     "@eslint/compat": "^1.0.1",
     "@next/bundle-analyzer": "^14.2.4",
     "@next/eslint-plugin-next": "^14.2.4",
-    "typescript": "5.4.5",
     "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "^8.56.10",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@types/uuid": "^9.0.8",
-    "clsx": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.22.8",
     "encoding": "^0.1.13",
     "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-config-next": "14.2.4",
-    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-functional": "^6.5.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-oxlint": "^0.4.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.3.0",
     "lint-staged": "^15.2.5",
     "oxlint": "^0.4.2",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.2",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-radix": "^3.0.3",
+    "typescript": "5.4.5"
   }
 }
