--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "global-require": "off",
     "no-console": "off",
     "import/prefer-default-export": "off",
+    "import/no-anonymous-default-export": "off",
     "import/extensions": "off",
     "import/no-dynamic-require": "off",
     "import/no-extraneous-dependencies": "off",
